Version 5.51
------------
Added CPropertySheet class
Added CPropertyPage class
Added CWnd::CenterWindow
Removed CDialog::Center


Version 5.5
-----------
Bugs Fixed:
* Visual Studio 6 (without a Platform SDK update) reports a 'TB_GETSTRING' 
  as an undeclared identifier.
* Dev-C++ reports a warning passing NULL used for non-pointer
* Threads sample, can generate an exception in release mode
* Performance sample, m_nTestWindows not initialised
* Corrected text layout for toolbar buttons with TBSYLE_DROPDOWN style.

New Features:
* Themes are now enabled by default. CFrame::SetTheme defines the default
  theme for the rebar, toolbar and menubar. To modify the theme, override
  SetTheme in CMainFrame. To disable themes, set m_bUseThemes to FALSE in
  CMainFrame::OnCreate.
* The default color of a splitter bar is set to the background color of 
  the rebar.  
* If a resource for disabled toolbar items isn't provided, an ImageList
   for disabled buttons is created for you. This imagelist is used for
   displaying disabled toobar buttons, and disabled menu items with an icon.
* Updated Rebar themes
  - Improved rendering of non-toolbar bands during band repositioning
  - Round borders and flat style now supported in Win95, Win98 & WinME
* Updated Toolbar themes
  - Improved layout of images and text on toolbar buttons
  - Themed toolbar now supports TBSTYLE_LIST
* Added XP theme support for Visual Studio 6
* Icons for disabled popup menu items are now greyed
* Added Menubar theme support
  - Gradient background for hot buttons (any two colors)
  - Gradient background for pressed buttons (any two colors)
  - Gradient Sidebar for menu items based on pressed button colors.
  - A border color for Menubar buttons and selected menu items
* The background color of a window (window class) can now be set with
   CWnd::SetBkgndColor

The following changes have been made to the Win32++ code:
Added CFrame::SetTheme
Added CMenubar::GetTheme
Added CMenubar::SetTheme