@@ -63,6 +63,7 @@ void CMainMDIFrame::OnCreate()
 	// m_bShowIndicatorStatus = FALSE;	// Don't show statusbar indicators
 	// m_bShowMenuStatus = FALSE;		// Don't show toolbar or menu status
 	// m_bUseRebar = FALSE;				// Don't use rebars
+	// m_bUseThemes = FALSE;            // Don't use themes
 
 	// call the base class function
 	CFrame::OnCreate();
