@@ -3,6 +3,7 @@ Version 5.51
 Added CPropertySheet class
 Added CPropertyPage class
 Added CWnd::CenterWindow
+Added CMDIFrame::GetActiveMDIChildCWnd
 Removed CDialog::Center
 
 
